api-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nanumsa-api-server
  name: nanumsa-api-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nanumsa-api-server
  template:
    metadata:
      labels:
        app: nanumsa-api-server
    spec:
      containers:
      - env:
        - image: smilemeeso/nanumsa-front:0.1.33
          name: nanumsa-api-server
          ports:
          - containerPort: 80
        - name: AWS_ACCESS_KEY_ID
          valueFrom:
            secretKeyRef:
              key: aws_access_key_id
              name: aws-secret
        - name: AWS_SECRET_ACCESS_KEY
          valueFrom:
            secretKeyRef:
              key: aws_secret_access_key
              name: aws-secret
        - name: AWS_REGION
          valueFrom:
            secretKeyRef:
              key: aws_region
              name: aws-secret
        - name: NANUMSA_SERVER_FIREBASE_ADMIN_CREDENTIAL_FILE_PATH
          valueFrom:
            secretKeyRef:
              key: nanumsa-server-firebase-admin-credential-file-path
              name: firebase-auth
