api-server/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nanumsa-api-server
spec:
    type: ClusterIP
    selector:
        app: nanumsa-api-server
    ports:
        - name: network
          protocol: TCP
          port: 8080
          targetPort: 8080
        - name: postgresql
          protocol: TCP
          port: 5433
          targetPort: 5432
