api-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nanumsa-api-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    cert-manager.io/acme-challenge-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy_buffer_size: 128k
    nginx.ingress.kubernetes.io/proxy_buffers: 4256k
    nginx.ingress.kubernetes.io/proxy_busy_buffers_size: 256k
spec:
  ingressClassName: nginx
  tls: 
  - hosts: 
    - www.nanumsa.com
    secretName: tls-secret-api-server
  rules:
  - host: www.nanumsa.com
    http:
      paths:
      - path: /api/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: nanumsa-api-server
            port:
              number: 8080
